Change site team and fix invisible mobile nav toggler

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  
+  background-color: #2b3e50 !important;
+  color: #fff !important;
+}
+
+a {
+  color: #df691a !important;
 }
